make the designe Responsiv

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <div class="bd2">
                     <div>Monthly</div>
                     <div>Pay monthly, cancel any time.</div>
-                    <div class="price"> <sup>$</sup>20<sub>/m</sub> </div>                </div>
-                <input class="btn" type="button" value="Make payment">
+                    <div class="price"> <sup>$</sup>20<sub>/m</sub> </div>                
+                </div>
+                <input class="btn" type="button"  value="Make payment">
             </div>
       </div>
   </div>
-   
 </body>
 </html>
